--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,10 @@ locale: en_US
 description: Musings of a Cloud Solution Architect.
 logo: site-logo.png
 search: true
-comments: true
+comments: false
 url: http://localhost:4000
 images: /images
+excerpt_separator: <!--more-->
 
 # Jekyll configuration
 
@@ -16,7 +17,7 @@ highlighter: rouge
 sass:
   sass_dir: _sass
   style: compressed
-gems:
+plugins:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-feed
